# TPs-Algo2

./: README.md
algo2/: Tp2_CampusSeguro.tex
algo2/TP 2 Cuatri pasado/tp1-dcnet/: Tp2_DcNet.aux  Tp2_DcNet.out  Tp2_DcNet.tex  Tp2_DcNet.toc  aed2-itef.sty  aed2-tad.sty  aed2-tokenizer.sty  caratula.sty
algo2/tp_2/: .gitignore  readme.md  tp2_TADs_auxiliares.tex  tp2_agentes_source.tex  tp2_conjunto_source.tex  tp2_diccrapido_source.tex  tp2_hippiesyestudiantes_source.tex  tp2_modulo_Campus.tex  tp2_modulo_CampusSeguro.tex  tp2_modulo_DiccClavesRapidas.tex  tp2_modulo_Matriz.tex  tp2_source.tex  tp_campus_seguro.tex
algo2/tp_2/assets/: Leeme
algo2/tp_2/assets/ejemplo TP/: Tp1_DcNet.tex  aed2-symb.sty
algo2/tp_3/: Agentes.cpp  Agentes.h  CMakeLists.txt  CampusSeguro.cpp  CampusSeguro.h  DiccClavesRapidas.h  DiccRapido.h  HippiesYEstudiantes.cpp  HippiesYEstudiantes.h  Matriz.h  campus.h
algo2/tp_3/Testing/: Driver.cpp  Driver.h  Makefile  Resultado_Valgrind.txt  Tipos.h  test.cpp
algo2/tp_3/Testing/aed2/: Lista.h
